--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       height: 100%;
       width: 100%;
       text-align: center;
+      background: url('https://c4.wallpaperflare.com/wallpaper/98/513/237/vaporwave-grid-sun-wallpaper-preview.jpg') no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 
     #unity-canvas {
@@ -68,9 +73,9 @@
     var buildUrl = "Build";
     var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
     var config = {
-      dataUrl: buildUrl + "/WebGLBuild.data.unityweb",
-      frameworkUrl: buildUrl + "/WebGLBuild.framework.js.unityweb",
-      codeUrl: buildUrl + "/WebGLBuild.wasm.unityweb",
+      dataUrl: buildUrl + "/WebGLBuild.data.br",
+      frameworkUrl: buildUrl + "/WebGLBuild.framework.js.br",
+      codeUrl: buildUrl + "/WebGLBuild.wasm.br",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "JohannesDeml",
       productName: "WebLoadingTest",
