--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       height: 100%;
       width: 100%;
       text-align: center;
-      /*background: url('https://c4.wallpaperflare.com/wallpaper/98/513/237/vaporwave-grid-sun-wallpaper-preview.jpg') no-repeat center center fixed;*/
-      /*-webkit-background-size: cover;*/
-      /*-moz-background-size: cover;*/
-      /*-o-background-size: cover;*/
-      /*background-size: cover;*/
+      background: url('https://c4.wallpaperflare.com/wallpaper/98/513/237/vaporwave-grid-sun-wallpaper-preview.jpg') no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
 
     #unity-canvas {
